# dotty

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: dotty.yaml
src/: main.rs
src/cli/: args.rs  banner.rs  mod.rs
src/core/: config.rs  git.rs  mod.rs
src/utils/: backup.rs  files.rs  mod.rs  output.rs  spinner.rs  system.rs  validation.rs
src/utils/install/: aur.rs  mod.rs  pacman.rs
