[package]
name = "dotty"
version = "0.0.5"
edition = "2021"
description = "A dotfile manager that helps you manage your configuration files"
authors = ["Ali Mohammad Moharramzadeh <h3li0p4us3@proton.me>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
dirs = "5.0"
colored = "2.1"
tempfile = "3.10"
walkdir = "2.4"
shellexpand = "3.1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
